--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -788,7 +788,7 @@
                             </view>
                             <imageView contentMode="scaleToFill" image="video_placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="jz8-7g-YcJ">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="199" type="user" id="2Pp-hl-wBM"/>
+                                    <constraint firstAttribute="height" constant="199" id="x95-pr-jhd"/>
                                 </constraints>
                             </imageView>
                         </subviews>
