--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -211,6 +211,26 @@
             </objects>
             <point key="canvasLocation" x="-4305" y="1434"/>
         </scene>
+        <!--Table View Controller - Preferences-->
+        <scene sceneID="DYL-Zo-6ht">
+            <objects>
+                <tableViewController storyboardIdentifier="preferences" id="A7T-oC-Cdk" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="gBm-Wh-40g">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="A7T-oC-Cdk" id="tDm-oY-JTa"/>
+                            <outlet property="delegate" destination="A7T-oC-Cdk" id="t1g-H9-SQM"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Preferences" id="MKu-zp-Vhf"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WkH-cx-La6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4306" y="2010"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="a8p-2o-1of">
             <objects>
