--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -179,10 +179,10 @@
             </objects>
             <point key="canvasLocation" x="-4801" y="844"/>
         </scene>
-        <!--Home Controller - Home-->
+        <!--Timeline Controller - Timeline-->
         <scene sceneID="Xgk-nk-MCO">
             <objects>
-                <tableViewController storyboardIdentifier="home" id="pom-YC-2IM" customClass="XBHomeController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="timeline" id="pom-YC-2IM" customClass="XBTimelineController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="9NJ-mu-lQe">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -192,7 +192,7 @@
                             <outlet property="delegate" destination="pom-YC-2IM" id="IXC-4N-7VV"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Home" id="88e-vK-cQs"/>
+                    <navigationItem key="navigationItem" title="Timeline" id="88e-vK-cQs"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="9NJ-mu-lQe" id="YJE-Jv-G5u"/>
@@ -613,6 +613,17 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dFt-gE-gUG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2022" y="2323"/>
+        </scene>
+        <!--Page View Controller - Title-->
+        <scene sceneID="BeO-qG-OHB">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="ZRR-39-gio" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="Title" id="ft2-zR-W1O"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
+                </pageViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v84-NH-qbV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1645" y="2325"/>
         </scene>
         <!--Video Table View Controller - Videos-->
         <scene sceneID="CCD-qM-qNX">
